# CalcGTest

./: .gitignore  CMakeLists.txt  IHistory.h  InMemoryHistory.cpp  README.md  SimpleCalculator.cpp
tests/: CMakeLists.txt  CalculatorTest.cpp  EdgeCaseTest.cpp  HistroyTest.cpp
